@@ -1,3 +1,6 @@
+[B]0.9.34[/B]
+Test out moveup/down scroll around for EPG
+
 [B]0.9.33[/B]
 Development moves to Leia only
 Fix Kodi Requires version
